# pacsnode

./: .gitignore  Cargo.toml  Dockerfile  NOTICE  OHIF_AUDIT.md  OHIF_VIEWER_INTEGRATION.md  PLUGIN_GUIDE.md  README.md  config.toml.example  deny.toml  electron-builder.yml  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
DOCS/: PACSNODE_API_SURVEY.md  PACSNODE_ENDPOINTS_REFERENCE.md  PACSNODE_QUICK_SUMMARY.txt  auth-plan.md  auth-tutorial.md  dicom-toolkit-rs-dicomweb-requirements.md  feature-matrix.md  final-plan.md  ohif-server-requirements.md  ohif-viewer-integration.md  plugin-system.md
crates/pacs-admin-plugin/: Cargo.toml
crates/pacs-admin-plugin/src/: import.rs  lib.rs  logs.rs  runtime.rs  web.rs
crates/pacs-admin-plugin/templates/: audit.html  base.html  dashboard.html  logs.html  nodes.html  placeholder.html  studies.html  system.html  users.html
crates/pacs-admin-plugin/templates/fragments/: audit_results.html  import_panel.html  logs_results.html  nodes_panel.html  recent_activity_items.html  stats_cards.html  studies_results.html  system_settings_panel.html  toast.html  users_panel.html
crates/pacs-admin-plugin/templates/static/: admin.css
crates/pacs-api/: Cargo.toml
crates/pacs-api/src/: error.rs  lib.rs  policy.rs  router.rs  state.rs
crates/pacs-api/src/routes/: health.rs  mod.rs  qido.rs  stow.rs  wado.rs
crates/pacs-api/src/routes/rest/: audit.rs  instances.rs  mod.rs  nodes.rs  series.rs  studies.rs
crates/pacs-audit-plugin/: Cargo.toml
crates/pacs-audit-plugin/src/: lib.rs
crates/pacs-auth-plugin/: Cargo.toml
crates/pacs-auth-plugin/src/: lib.rs
crates/pacs-auth-plugin/templates/: login.html
crates/pacs-core/: Cargo.toml
crates/pacs-core/src/: error.rs  lib.rs  policy.rs
crates/pacs-core/src/blob/: mod.rs
crates/pacs-core/src/domain/: audit.rs  auth.rs  instance.rs  json.rs  mod.rs  node.rs  query.rs  series.rs  server_settings.rs  stats.rs  study.rs  user.rs
crates/pacs-core/src/store/: mod.rs
crates/pacs-dicom/: Cargo.toml
crates/pacs-dicom/src/: encode.rs  error.rs  lib.rs  parser.rs  stow.rs  tags.rs  wado.rs
crates/pacs-dimse/: Cargo.toml
crates/pacs-dimse/src/: config.rs  error.rs  lib.rs  plugin.rs
crates/pacs-dimse/src/client/: echo.rs  find.rs  mod.rs  move_scu.rs  store.rs
crates/pacs-dimse/src/server/: mod.rs  provider.rs  server_association.rs
crates/pacs-fs-storage/: Cargo.toml
crates/pacs-fs-storage/src/: config.rs  error.rs  fs.rs  lib.rs  plugin.rs
crates/pacs-metrics-plugin/: Cargo.toml
crates/pacs-metrics-plugin/src/: lib.rs
crates/pacs-pacsleaf-viewer-plugin/: Cargo.toml  build.rs
crates/pacs-pacsleaf-viewer-plugin/src/: lib.rs
crates/pacs-plugin/: Cargo.toml
crates/pacs-plugin/src/: auth.rs  capabilities.rs  context.rs  error.rs  event.rs  lib.rs  plugin.rs  registry.rs  state.rs
crates/pacs-server/: Cargo.toml
crates/pacs-server/src/: config.rs  main.rs
crates/pacs-sqlite-store/: Cargo.toml
crates/pacs-sqlite-store/migrations/: 0001_initial.sql  0002_dicom_nodes.sql  0003_audit_log.sql  0004_study_series_count_triggers.sql  0005_server_settings.sql  0006_users_and_roles.sql  0007_server_settings_storage_transfer_syntax.sql
crates/pacs-sqlite-store/src/: lib.rs  plugin.rs  store.rs
crates/pacs-storage/: Cargo.toml
crates/pacs-storage/src/: config.rs  error.rs  lib.rs  plugin.rs  s3.rs
crates/pacs-store/: Cargo.toml
crates/pacs-store/src/: error.rs  lib.rs  plugin.rs  store.rs
crates/pacs-store/src/queries/: audit.rs  instance.rs  mod.rs  node.rs  password_policy.rs  refresh_token.rs  series.rs  server_settings.rs  study.rs  user.rs
crates/pacs-store/tests/: integration_test.rs
crates/pacs-viewer-plugin/: Cargo.toml  build.rs
crates/pacs-viewer-plugin/src/: lib.rs
docker/: .env.example  docker-compose.yml
migrations/: 0001_initial.sql  0002_dicom_nodes.sql  0003_audit_log.sql  0004_study_series_count_triggers.sql  0005_server_settings.sql  0006_users_and_roles.sql
scripts/: simulate-ci.sh  smoke-test.ps1  smoke-test.sh  update-dicom-toolkit.sh  verify-htj2k-frame.py
src/: index.html  main.js  storescu.js  utils.js
src/routes/: routes.js
testfiles/: ABDOM_1.dcm  ABDOM_2.dcm  ABDOM_3.dcm  ABDOM_4.dcm  ABDOM_5.dcm
web/pacsleaf-viewer/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/pacsleaf-viewer/docs/: dicomview-deviations.md
web/pacsleaf-viewer/src/: App.tsx  index.css  main.tsx
web/viewer/: 1403.bundle.18c65a2921674e540325.js  1403.bundle.18c65a2921674e540325.js.map  1459.bundle.57d2525094d7621d06bc.js  1459.bundle.57d2525094d7621d06bc.js.map  147.bundle.f5975548b2542ffc5da3.js  147.bundle.f5975548b2542ffc5da3.js.map  147.css  147.css.map  1608.bundle.47ffa224af101b88fa39.js  1608.bundle.47ffa224af101b88fa39.js.map  1608.css  1608.css.map  1730.bundle.2cb42c261814d70b8fc9.js  1730.bundle.2cb42c261814d70b8fc9.js.map  1730.css  1730.css.map  1927.bundle.32977df326944c7d5beb.js  1927.bundle.32977df326944c7d5beb.js.map  1927.bundle.48e9de873531b786b04f.js  1927.bundle.48e9de873531b786b04f.js.map  1933.bundle.00a4cbeba5a51971c9b4.js  1933.bundle.00a4cbeba5a51971c9b4.js.map  1933.css  1933.css.map  2018.bundle.cf915fd7ed8c6749a089.js  2018.bundle.cf915fd7ed8c6749a089.js.map  2108.bundle.e57164d1c50fe42123a6.js  2108.bundle.e57164d1c50fe42123a6.js.LICENSE.txt  2108.bundle.e57164d1c50fe42123a6.js.map  213.bundle.bf7abe7f294cac465390.js  213.bundle.bf7abe7f294cac465390.js.map  2424.bundle.9931e144ecc556c4e80a.js  2424.bundle.9931e144ecc556c4e80a.js.map  2516.bundle.005effa2d361bc5b7904.js  2516.bundle.005effa2d361bc5b7904.js.map  2591.css  2591.css.map  2701.bundle.3f630d178c658bd71e93.js  2701.bundle.3f630d178c658bd71e93.js.map  2838.bundle.abf8b12af25492429ba6.js  (+128 more)
web/viewer/dicom-microscopy-viewer/: dataLoader.worker.min.js  dicomMicroscopyViewer.min.js
web/viewer/ort/: ort.all.js  ort.all.min.js  ort.js  ort.min.js  ort.node.min.js  ort.training.wasm.min.js  ort.wasm-core.min.js  ort.wasm.min.js  ort.webgl.min.js  (+1 more)
(+42 files in other folders)
