[package]
name = "pacs-admin-plugin"
description = "pacsnode admin dashboard plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
askama = { workspace = true }
askama_axum = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
pacs-core = { workspace = true }
pacs-dicom = { workspace = true }
pacs-dimse = { workspace = true }
pacs-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }