[package]
name        = "pacs-core"
description = "pacsnode — domain types, traits, and error types"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
async-trait  = { workspace = true }
bytes        = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
mockall  = { workspace = true }
rstest   = { workspace = true }
tokio    = { workspace = true }
