[package]
name        = "pacs-fs-storage"
description = "pacsnode — filesystem BlobStore implementation"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
pacs-core    = { workspace = true }
pacs-plugin  = { workspace = true }
async-trait  = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
tokio      = { workspace = true }
