[package]
name        = "pacs-metrics-plugin"
description = "pacsnode Prometheus metrics plugin"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
async-trait = { workspace = true }
axum        = { workspace = true }
pacs-plugin = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum        = { workspace = true }
bytes       = { workspace = true }
pacs-core   = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
