[package]
name = "pacs-pacsleaf-viewer-plugin"
description = "pacsnode pacsleaf web viewer plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
pacs-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }

[build-dependencies]
sha2 = "0.10.8"
walkdir = "2.5.0"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
