[package]
name        = "pacs-server"
description = "pacsnode — binary entry point"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[[bin]]
name = "pacsnode"
path = "src/main.rs"

[dev-dependencies]
serial_test = { workspace = true }

[dependencies]
axum         = { workspace = true }
pacs-auth-plugin = { workspace = true }
pacs-audit-plugin = { workspace = true }
pacs-core    = { workspace = true }
pacs-plugin  = { workspace = true }
pacs-store   = { workspace = true }
pacs-storage = { workspace = true }
pacs-dicom   = { workspace = true }
pacs-dimse   = { workspace = true }
pacs-metrics-plugin = { workspace = true }
pacs-api     = { workspace = true }
anyhow       = { workspace = true }
config       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
