[package]
name        = "pacs-server"
description = "pacsnode — binary entry point"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[features]
default = ["all-backends"]
all-backends = ["postgres", "sqlite", "s3", "filesystem"]
postgres = ["dep:pacs-store"]
sqlite = ["dep:pacs-sqlite-store"]
s3 = ["dep:pacs-storage"]
filesystem = ["dep:pacs-fs-storage"]
standalone = ["sqlite", "filesystem"]
production = ["postgres", "s3"]

[[bin]]
name = "pacsnode"
path = "src/main.rs"

[dev-dependencies]
serial_test = { workspace = true }

[dependencies]
axum         = { workspace = true }
pacs-auth-plugin = { workspace = true }
pacs-audit-plugin = { workspace = true }
pacs-core    = { workspace = true }
pacs-fs-storage = { workspace = true, optional = true }
pacs-plugin  = { workspace = true }
pacs-sqlite-store = { workspace = true, optional = true }
pacs-store   = { workspace = true, optional = true }
pacs-storage = { workspace = true, optional = true }
pacs-dicom   = { workspace = true }
pacs-dimse   = { workspace = true }
pacs-metrics-plugin = { workspace = true }
pacs-viewer-plugin = { workspace = true }
pacs-api     = { workspace = true }
anyhow       = { workspace = true }
config       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
