[package]
name        = "pacs-sqlite-store"
description = "pacsnode — SQLite MetadataStore implementation"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
async-trait = { workspace = true }
chrono      = { workspace = true }
pacs-core   = { workspace = true }
pacs-plugin = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
