[package]
name        = "pacs-store"
description = "pacsnode — PostgreSQL MetadataStore implementation"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
pacs-core    = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
mockall              = { workspace = true }
rstest               = { workspace = true }
testcontainers       = { workspace = true }
testcontainers-modules = { workspace = true }
tokio                = { workspace = true }
